momo-store-application/helm/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "yc-clusterissuer"
spec:
  ingressClassName: "nginx"  
  tls:
    - hosts:
      - momo-store.poletaevlev.ru
      secretName: tls-secret-momo-store
    - hosts:
      - grafana.poletaevlev.ru
      secretName: tls-secret-grafana
  rules:
    - host: "momo-store.poletaevlev.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: "grafana.poletaevlev.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: promet-grafana
                port:
                  number: 80
